# data-mining

./: README.md  requirements.txt  setup.cfg
data/: rental.csv
datamining/plots/: lda.py  lsh.py  lsh_hyperplane.py  pagerank.py  rw_global_conv.py
notebooks/: 00_prog_intro.ipynb  00_prog_intro_solved.ipynb  01_basics.ipynb  02_distances.ipynb  03_lsh.ipynb  04_dim_reduction.ipynb  05_frequent_datamining.ipynb  06_graph.ipynb  07_clustering.ipynb
