[metadata]
name = datamining
version = 1.0.5
author = Tamás Ficsor
author_email = ficsort@inf.u-szeged.hu
description = Supplementary material for Data Mining course
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ficstamas/data-mining
project_urls =
    Bug Tracker = https://github.com/ficstamas/data-mining/issues
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    pandas
    scikit-learn
    matplotlib
    seaborn
    scipy
    bitarray
